[gd_scene load_steps=20 format=2]

[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://CameraGimbal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Scene.gd" type="Script" id=3]
[ext_resource path="res://Head.tscn" type="PackedScene" id=4]
[ext_resource path="res://Head2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sounds/Linn Friberg - Let There Be Peace.mp3" type="AudioStream" id=6]
[ext_resource path="res://MenuButton.gd" type="Script" id=7]
[ext_resource path="res://Scripts/MenuButtonOther.gd" type="Script" id=8]
[ext_resource path="res://Images/UI/speaker-off.png" type="Texture" id=9]
[ext_resource path="res://Images/UI/speaker.png" type="Texture" id=10]
[ext_resource path="res://Scripts/MenuButtonHead1.gd" type="Script" id=11]
[ext_resource path="res://Scripts/MenuButtonHead2.gd" type="Script" id=12]
[ext_resource path="res://Fonts/CreteRound-Regular.ttf" type="DynamicFontData" id=13]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 1 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 13 )

[sub_resource type="Environment" id=6]
background_mode = 1
background_color = Color( 0.192157, 0.188235, 0.309804, 1 )

[node name="Scene" type="Node"]
script = ExtResource( 3 )

[node name="SelectionUI" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtonHead1" type="MenuButton" parent="SelectionUI"]
margin_right = 57.0
margin_bottom = 27.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
text = "Head 1"
flat = false
items = [ "Toggle Visibility", null, 0, false, false, 0, 0, null, "", false, "Show Information", null, 0, false, false, 1, 0, null, "", false, "Set as Focus", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 11 )

[node name="ButtonHead1" type="Button" parent="SelectionUI"]
visible = false
margin_left = 67.0
margin_right = 206.0
margin_bottom = 27.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Show/hide Head 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFocus1" type="Button" parent="SelectionUI"]
visible = false
margin_left = 67.0
margin_right = 169.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "Focus Head 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtonHead2" type="MenuButton" parent="SelectionUI"]
margin_left = 67.0
margin_right = 127.0
margin_bottom = 27.0
theme = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Head 2"
flat = false
items = [ "Toggle Visibility", null, 0, false, false, 0, 0, null, "", false, "Show Information", null, 0, false, false, 1, 0, null, "", false, "Set as Focus", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 12 )

[node name="ButtonHead2" type="Button" parent="SelectionUI"]
visible = false
margin_left = 137.0
margin_right = 279.0
margin_bottom = 27.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Show/hide Head 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFocus2" type="Button" parent="SelectionUI"]
visible = false
margin_left = 137.0
margin_right = 242.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "Focus Head 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtonStyle" type="MenuButton" parent="SelectionUI"]
margin_left = 137.0
margin_right = 276.0
margin_bottom = 27.0
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Stylistic Elements"
flat = false
items = [ "Melon Coiffure", null, 0, false, false, 0, 0, null, "", false, "Shield like Coiffure", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 7 )

[node name="MenuButtonOther" type="MenuButton" parent="SelectionUI"]
margin_left = 286.0
margin_right = 434.0
margin_bottom = 27.0
focus_mode = 2
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Other Annotations"
flat = false
items = [ "Lack of information", null, 0, false, false, 0, 0, null, "", false ]
script = ExtResource( 8 )

[node name="ButtonProjectInfo" type="Button" parent="SelectionUI"]
margin_left = 444.0
margin_right = 599.0
margin_bottom = 27.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Project Information"

[node name="CameraGimbal" parent="." instance=ExtResource( 2 )]
min_zoom = 0.1
max_zoom = 1.0

[node name="Tween" type="Tween" parent="."]

[node name="ItemList" type="ItemList" parent="."]
visible = false
margin_left = 20.0
margin_top = 60.0
margin_right = 120.0
margin_bottom = 180.0
focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonScreenCapture" type="Button" parent="."]
visible = false
margin_right = 108.0
margin_bottom = 20.0
text = "Capture Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSavePosition" type="Button" parent="."]
visible = false
margin_left = 8.0
margin_top = 56.0
margin_right = 115.0
margin_bottom = 83.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Save Position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" parent="." instance=ExtResource( 4 )]

[node name="Head2" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.798625, -0.103441, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.999947, -0.00213067, -0.0100793, 0.0100038, -0.0328917, 0.999409, -0.00246094, -0.999457, -0.0328686, -0.0142493, 3.24309, 0.00999498 )
light_energy = 0.5

[node name="DirectionalLight2" type="DirectionalLight" parent="."]
transform = Transform( 0.999997, -0.00168641, 0.00146551, 0.0014138, -0.0302699, -0.999541, 0.00173, 0.99954, -0.0302675, 0.187719, -2.90109, -0.102089 )
light_energy = 0.5

[node name="DirectionalLight3" type="DirectionalLight" parent="."]
transform = Transform( 0.0263366, 0.00506847, 0.99964, 0.000390588, 0.999987, -0.00508052, -0.999653, 0.00052425, 0.0263342, 3.78335, 0.1683, 0.0531604 )
light_energy = 0.5

[node name="DirectionalLight4" type="DirectionalLight" parent="."]
transform = Transform( -0.0769891, 0.00739203, -0.997005, -0.000202326, 0.999972, 0.00742966, 0.997032, 0.000773722, -0.0769855, -3.70493, 0.1683, 0.19496 )
light_energy = 0.5

[node name="DirectionalLight5" type="DirectionalLight" parent="."]
transform = Transform( -0.999425, 0.000536757, -0.0338886, 0.0004307, 0.999995, 0.00313681, 0.0338901, 0.00312041, -0.999421, -0.329297, 0.1683, -4.26362 )
light_energy = 0.5

[node name="DirectionalLight6" type="DirectionalLight" parent="."]
transform = Transform( 0.998363, -0.00634392, -0.0568403, 0.00822328, 0.999425, 0.0328912, 0.056599, -0.0333047, 0.997841, -0.329297, 0.1683, 3.96412 )
light_energy = 0.5

[node name="ButtonAnnot1" type="Button" parent="."]
visible = false
margin_left = 20.0
margin_top = 160.0
margin_right = 114.0
margin_bottom = 180.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Annotation 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAnnot2" type="Button" parent="."]
visible = false
margin_left = 20.0
margin_top = 200.0
margin_right = 114.0
margin_bottom = 220.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Annotation 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAnnot3" type="Button" parent="."]
visible = false
margin_left = 20.0
margin_top = 240.0
margin_right = 114.0
margin_bottom = 260.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Annotation 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialogTextHead2" type="WindowDialog" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -504.0
margin_top = -196.0
margin_right = -4.0
margin_bottom = 104.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextHead2" type="RichTextLabel" parent="WindowDialogTextHead2"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
custom_fonts/normal_font = ExtResource( 1 )
text = "
This is an additional 3D model created to accompany LUKS148 showing its different context in color.

Red: Original roman marble. 
Blue: Restorations done probably during the 18th century. 
Green: Areas with bad information during photogrammetry campaign wich resulted in inaccurate result. 
Yellow: Digital reconstructions made in post processing."
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialogTextHead" type="WindowDialog" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -504.0
margin_top = -108.0
margin_right = -4.0
margin_bottom = 192.0
popup_exclusive = true

[node name="TextHead" type="RichTextLabel" parent="WindowDialogTextHead"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
custom_fonts/normal_font = ExtResource( 1 )
text = "
A reconstruction made for my masters thesis in Archaeology and ancient history at Lund University.

Roman portrait head in marble from the end of the 1st century CE.
Portraying a female with distinct flavian-style shield like coiffure above the forehead and a melon coiffure in the back.
The reconstruction lacks information from the bottom and on parts of the knot in the back of the coiffure.

The original artefact is part of the Lund University art collection: LUK S148.

Model by Filip Johstone, processed from 44 photographs using a Canon EOS 6D Mark II in Agisoft Metashape."
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog1" type="WindowDialog" parent="."]
show_behind_parent = true
anchor_top = 0.8
anchor_bottom = 0.8
margin_left = 8.0
margin_top = -208.0
margin_right = 258.0
margin_bottom = -8.0
custom_fonts/title_font = ExtResource( 1 )
popup_exclusive = true
window_title = "Melon Coiffure"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextAnnot1" type="RichTextLabel" parent="WindowDialog1"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
custom_fonts/normal_font = ExtResource( 1 )
text = "The melon coiffure.

Hairstyle that had been popular in the higher social strata in rome for some time during the late 1st century. Can be seen on portraits of Livia."
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog2" type="WindowDialog" parent="."]
show_behind_parent = true
anchor_top = 0.8
anchor_bottom = 0.8
margin_left = 40.0
margin_top = -184.0
margin_right = 290.0
margin_bottom = 16.0
custom_fonts/title_font = ExtResource( 1 )
popup_exclusive = true
window_title = "Shield like Coiffure"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextAnnot2" type="RichTextLabel" parent="WindowDialog2"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
custom_fonts/normal_font = ExtResource( 1 )
text = "The Shieldlike coiffure.

Hairstyle popular in the later flavian and early trajanic style periods. It can be seen on portraits of Domitia Longina, Domitians wife and the empress hade major stylistic influence."
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog3" type="WindowDialog" parent="."]
show_behind_parent = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -100.0
margin_right = 250.0
margin_bottom = 100.0
custom_fonts/title_font = ExtResource( 1 )
popup_exclusive = true
window_title = "Lack of information"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextAnnot3" type="RichTextLabel" parent="WindowDialog3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
focus_mode = 2
custom_fonts/normal_font = ExtResource( 1 )
text = "
This spot and the bottom side of the neck has bad information and lacks information from conditions during the photo acquisition."
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonReturnGimbal" type="Button" parent="."]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 32.0
margin_bottom = 40.0
text = "Return Gimbal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0

[node name="TextureButton" type="TextureButton" parent="."]
material = SubResource( 4 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_top = 8.0
margin_right = 464.0
margin_bottom = 520.0
rect_scale = Vector2( 0.08, 0.08 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -400.0
margin_bottom = 400.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 343.0
margin_bottom = 793.0

[node name="LabelDescr" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 336.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Description"

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 336.0
margin_bottom = 403.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 407.0
margin_right = 336.0
margin_bottom = 786.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="Metadata" type="Tabs" parent="PanelContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 39.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabelMeta" type="RichTextLabel" parent="PanelContainer/VBoxContainer/TabContainer/Metadata"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
text = "LUK: S148
IDnr: 4745
Material: Marble (white)
Measurements: 30(h)x25(l)x26(w) cm
Category: Sculpture
Sub category: Head
Artist: Unknown
Location: Lund
Collection: Lund University Art Collection
Provenance: Gifted to the University in 1949 by Charles Sandegren. No prior information
Date/Period: Late 1st century CE
Style: Flavian
Description: Portrait of female roman with melon coiffure in the back and flavian shieldlike coiffure in the front as primary distincitve features. Mended and restored perhaps during the 18th century CE (nose, base). "
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paradata" type="Tabs" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 39.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabelPara" type="RichTextLabel" parent="PanelContainer/VBoxContainer/TabContainer/Paradata"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
text = "Digitized information folder: LUKS148_dataset12
Aquisition method: Photogrammetry
Software used: Agisoft Metashape
Num of textures: 1
Total polygons: 1,499,999
Num of pictures: 44
Total points: 750, 396
Author: F. Johnstone
Project filename: dataset_12.psx
Texture filename: dataset_12_high.jpg
Mesh filename: dataset_12_high.obj
Link to online repository: https://drive.google.com/drive/folders/1J4wht5NWNKsaPdCOHCjzqAo8tgtkfenf?usp=sharing"
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialogStart" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
custom_fonts/title_font = ExtResource( 1 )
window_title = "Greetings"

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialogStart"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/normal_font = SubResource( 5 )
text = "Welcome to the visualisation of my digital replication of a roman marble portrait for my masters thesis.

You can move around the 3D models by holding either middle or right mouse button and rotating and also zoom in and out using either the scroll wheel or +/- on the numpad.

The popup windows are movable and closable. And you select what to show using the top bar.

Using fullscreen is preferable."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="WindowDialogProject" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
custom_fonts/title_font = ExtResource( 1 )
window_title = "Project information"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Photogrammetry" type="RichTextLabel" parent="WindowDialogProject"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 290.0
grow_vertical = 0
focus_mode = 2
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 1 )
text = "Photogrammetry.

The photo-aquisition for the photogrammetric process was made by taking 44 images with a Canon EOS 6D Mark II. 

These images were the imported into Agisoft Metashape and processed into pointclouds and textured 3D models.

Analysis.

The textured 3D model was used in visual analyis and helped reveal information on stylistic elemets for typology and dating.

The point clouds were used in the software CloudCompare in order to produce a shapefile of the reproductions profile in order to conduct a profile analysis.

The 3D mesh was used in Blender with the ExtendedMatrix add-on in order to visualise my archaeological interpretation of the artefacts biographical context. This result can be seen in this project as Head 2."
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SelectionUI/ButtonHead1" to="." method="_on_ButtonHead1_pressed"]
[connection signal="pressed" from="SelectionUI/ButtonFocus1" to="." method="_on_ButtonFocus1_pressed"]
[connection signal="pressed" from="SelectionUI/ButtonHead2" to="." method="_on_ButtonHead2_pressed"]
[connection signal="pressed" from="SelectionUI/ButtonFocus2" to="." method="_on_ButtonFocus2_pressed"]
[connection signal="pressed" from="SelectionUI/ButtonProjectInfo" to="." method="_on_ButtonProjectInfo_pressed"]
[connection signal="item_activated" from="ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="pressed" from="ButtonScreenCapture" to="." method="_on_ButtonScreenCapture_pressed"]
[connection signal="pressed" from="ButtonSavePosition" to="." method="_on_ButtonSavePosition_pressed"]
[connection signal="pressed" from="ButtonAnnot1" to="." method="_on_ButtonAnnot1_pressed"]
[connection signal="pressed" from="ButtonAnnot2" to="." method="_on_ButtonAnnot2_pressed"]
[connection signal="pressed" from="ButtonAnnot3" to="." method="_on_ButtonAnnot3_pressed"]
[connection signal="pressed" from="ButtonReturnGimbal" to="." method="_on_ButtonReturnGimbal_pressed"]
[connection signal="toggled" from="TextureButton" to="." method="_on_TextureButton_toggled"]
